[package]
name = "substrate-archive"
version = "0.5.2"
authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
edition = "2018"

[dependencies]
# external
async-trait = "0.1"
chrono = "0.4.19"
coil = "0.4"
dirs = { version = "3", package = "directories" }
fdlimit = "0.2"
fern = { version = "0.6", features = ["colored"] }
flume = "0.10.5"
futures = "0.3"
hashbrown = { version = "0.11", features = ["inline-more"] }
hex = "0.4"
itertools = "0.10"
itoa = "0.4.7"
# Just a simple wrapper around std::thread that `joins on drop`
jod-thread = "0.1.2"
log = { version = "0.4", features = ["serde"] }
num_cpus = "1.13"
parking_lot = "0.11"
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol = "1.2"
smol-timeout = "0.6"
sqlx = { version = "0.5", default-features = false, features = ["postgres", "macros", "runtime-async-std-rustls", "migrate", "json", "offline", "chrono"] }
tempfile = "3.2.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
xtra = { version = "0.5", features = ["with-smol-1"] }
async-stream = "0.3"
easy-parallel = "3"

# Parity
codec = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive", "full"] }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-tracing = { git ="https://github.com/paritytech/substrate", branch = "master" }
sp-storage = { git ="https://github.com/paritytech/substrate", branch = "master" }

# Workspace
substrate-archive-backend = { path = '../substrate-archive-backend' }

[dev-dependencies]
test-common = { path = "../test-common/" }
sc-executor-common = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "master" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "master", package = "polkadot-service" }
anyhow = "1"
pretty_env_logger = "0.4.0"
tempfile = "3.2"
once_cell = "1.7.2"
dotenv = "0.15.0"
