[package]
name = "substrate-archive"
version = "0.6.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
# external
async-trait = "0.1"
arc-swap = "1.4.0"
chrono = "0.4.19"
dirs = { version = "3", package = "directories" }
fdlimit = "0.2"
fern = { version = "0.6", features = ["colored"] }
flume = "0.10.8"
futures = "0.3"
hashbrown = { version = "0.11", features = ["inline-more"] }
hex = "0.4"
itertools = "0.10"
itoa = "0.4.7"
log = { version = "0.4", features = ["serde"] }
num_cpus = "1.13"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
async-std = "1.9"
futures-timer = "3"
sqlx = { version = "0.5", default-features = false, features = ["postgres", "macros", "runtime-async-std-rustls", "migrate", "json", "offline", "chrono" ] }
tempfile = "3.2.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
xtra = { version = "0.5", features = ["with-async_std-1"] }
async-stream = "0.3"
semver = "1.0"

# Parity
desub = { package = "desub", git = "https://github.com/deeper-chain/desub", branch = "deeper-v0.9.24", features = ["polkadot-js"] }
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive", "full"] }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
sp-tracing = { git ="https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
sp-storage = { git ="https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }

# Workspace
substrate-archive-backend = { path = '../substrate-archive-backend' }
sa-work-queue = { path = "../work-queue/sa-work-queue" }

[dev-dependencies]
test-common = { path = "../test-common/" }
sc-executor-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
sc-executor-wasmtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24-1", package = "polkadot-service" }
anyhow = "1"
pretty_env_logger = "0.4.0"
tempfile = "3.2"
once_cell = "1.8"
