[package]
name = "test-common"
version = "0.1.0"
authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
edition = "2018"


[dependencies]
substrate-archive = { path = "../substrate-archive" }
substrate-archive-backend = { path = "../substrate-archive-backend" }
sc-executor = { package = "sc-executor", git = "https://github.com/paritytech/substrate", branch = "master" }
# used in tests for storing test data on disk
anyhow = "1"
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
