[package]
name = "test-common"
version = "0.1.0"
authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
edition = "2021"


[dependencies]
test-wasm = { path = "test-wasm" }
csv = "1"
hex = "0.4"
anyhow = "1"
once_cell = "1.8"
sqlx = { version = "0.5", default-features = false, features = ["postgres", "macros", "runtime-async-std-rustls", "migrate", "json", "offline", "chrono" ] }
lapin = "1.7"
async-amqp = "1"
async-std = "1.9"



