[package]
name = "test-common"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
rust-version = "1.56.1"


[dependencies]
test-wasm = { path = "test-wasm" }
csv = "1"
hex = "0.4"
anyhow = "1"
once_cell = "1.8"
sqlx = { version = "0.5", default-features = false, features = ["postgres", "macros", "runtime-async-std-rustls", "migrate", "json", "offline", "chrono" ] }
lapin = "1.9"
async-amqp = "2"
async-std = "1.9"



