[package]
name = "integration_tests"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
rust-version = "1.56.1"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sa-work-queue = { path = "../sa-work-queue", features = ["test_components"] }
test-common = { path = "../../test-common" }
serde = { version = "1.0", features = ["derive"] }
smol = "1.2.5"
futures = "0.3.5"
pretty_env_logger = "0.4.0"
log = "0.4.11"
once_cell = "1.4.0"
assert_matches = "1.3.0"
anyhow = "1.0.52"
antidote = "1.0.0"
flume = "0.10"
timer = { version = "3.0", package = "futures-timer" }

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[features]
