[package]
name = "sa-work-queue"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "1.7"
async-amqp = "1"
# coil_proc_macro = "0.3.0" need custom proc macro
threadpool = "1"
async-std = "1.9"
serde = "1.0"
tracing = "0.1"
thiserror = "1.0"
inventory = "0.1"
futures = "0.3.5"
async-trait = "0.1.36"
channel = { version = "0.10", package = "flume" }
itoa = "0.4.6"
serde_json = "1"
num_cpus = "1"

[dev-dependencies]
pretty_env_logger = "0.4"
dotenv = "0.15"
smol = "1.2"

