[package]
name = "sa-work-queue"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
lapin = "1.9"
async-amqp = "1"
sa_work_queue_proc_macro = { path = "../sa_work_queue_proc_macro" }
threadpool = "1"
async-std = "1.9"
serde = "1.0"
thiserror = "1.0"
inventory = "0.2"
futures = "0.3.5"
async-trait = "0.1.36"
flume = "0.10"
itoa = "0.4.6"
serde_json = "1"
num_cpus = "1"

[dev-dependencies]
pretty_env_logger = "0.4"
dotenv = "0.15"
smol = "1.2"
test-common = { path = "../../test-common" }

[features]
test_components = []
