[package]
name = "sa_work_queue_proc_macro"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "This library should not be used directly, it is re-exported through sa_work_queue"
license = "GPL-3.0"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true

[features]
nightly = []
